# StreamSplat

./: pyproject.toml  splat_inference.py
streamsplat/: __init__.py
