[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "streamsplat"
version = "0.1.4"
description = "Feed-forward framework for online dynamic 3D reconstruction from uncalibrated video streams"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy>=1.24",
    "tyro>=0.8",
    "safetensors>=0.4",
    "imageio[ffmpeg]>=2.34",
    "opencv-python-headless>=4.9",
    "accelerate>=0.30",
    "einops",
    "lpips",
    "transformers>=4.40",
    "timm",
    "kiui",
]

[tool.setuptools.packages.find]
where = [".", "submodules/diff-gaussian-rasterization-orth"]
include = ["streamsplat*", "model*", "configs*", "encoders*", "datasets*", "gaussian_renderer_dynamic*", "utils*", "diff_gaussian_rasterization_kiui_orth*"]
